<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/edit_view_margin"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/need"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/search"
        android:textColor="@android:color/white"
        android:layout_margin="@dimen/edit_view_margin"
        android:layout_width="match_parent"
        android:id="@+id/edit"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/cancel_btn"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/ok_btn"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:text="@string/ok"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>