<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TwitterActivity"
    >

    <FrameLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/container"
        >

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_weight="2"
            android:id="@+id/userTimeLine"
            android:layout_gravity="center"
            android:src="@drawable/ic_action_user"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_tweets" />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:id="@+id/homeTimeLine"
            android:layout_height="wrap_content"
            android:text="@string/home"
            />
        <ImageButton
            android:layout_weight="2"
            android:id="@+id/message"
            android:src="@drawable/ic_action_message"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tweet" />
    </LinearLayout>

</LinearLayout>